fix the overlaps

--- a/css/layout/common.css
+++ b/css/layout/common.css
@@ -23,6 +23,7 @@ html {
 body {
     font-family: var(--body-font-family);
     color: var(--main-font-color);
+    overflow: hidden;
 }
 
 
