--- a/css/layout/scroll-page-1.css
+++ b/css/layout/scroll-page-1.css
@@ -101,7 +101,9 @@ a {
 }
 
 .mainContainer {
-    
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
 }
 
 /* Banner */
